# ultra

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  SECURITY.md  clean_repository  llms.txt
.github/: FUNDING.yml  KEYS
.github/workflows/: build_release.yml  codeql-config.yml  codeql.yml  doxygen.yml
data/: iris.csv  iris.md  iris.xrff  petalrose.csv  petalrose.md  petalrose.py  wine.csv  wine.md
doc/assets/diagrams/: kernel.xmi
doc/doxygen/: doxygen.h  ultra  ultra.css
misc/: .dir-locals.el  gitmessage  ultra-style.el
src/: CMakeLists.txt  CMakePresets.json  evolution.h  evolution.tcc
src/examples/: CMakeLists.txt  rastrigin.cc  scheduling.cc  string_guess.cc  symbolic_regression.cc  symbolic_regression03.cc
src/examples/8queens/: 8queens.cc  8queens.pl  8queens02.cc
src/examples/knapsack/: knapsack.cc  knapsack.pl  knapsack02.cc
src/examples/nonogram/: nonogram01.cc  nonogram02.cc
src/examples/pathfinding/: pathfinding01.cc  pathfinding02.cc
src/examples/petalrose/: petalrose.cc
src/examples/polyomino/: polyomino00.cc  polyomino01.cc  polyomino02.cc
src/examples/sonar/: sonar.cc  sonar.md  sonar02.cc  sonar03.cc  sonar04.cc  sonar05.cc
src/examples/symbolic_regression/: symbolic_regression.cc  symbolic_regression01.cc  symbolic_regression02.cc  symbolic_regression03.cc  symbolic_regression04.cc  symbolic_regression05.cc  symbolic_regression_bis.cc
src/examples/zengarden/: zengarden01.cc
src/kernel/: CMakeLists.txt  alps.cc  alps.h  analyzer.h  analyzer.tcc  cache.h  cache.tcc  decision_vector.h  distribution.h  distribution.tcc  environment.cc  environment.h  evaluation_context.h  evaluator.h  evaluator.tcc  evaluator_proxy.h  evaluator_proxy.tcc  evolution.h  evolution.tcc  evolution_callbacks.h  evolution_recombination.h  evolution_recombination.tcc  evolution_replacement.h  evolution_replacement.tcc  evolution_selection.h  evolution_selection.tcc  evolution_status.h  evolution_status.tcc  evolution_strategy.h  evolution_strategy.tcc  evolution_summary.h  evolution_summary.tcc  exceptions.h  fitness.cc  fitness.h  fitness.tcc  hash_t.cc  hash_t.h  individual.cc  individual.h  (+49 more)
src/kernel/de/: individual.cc  individual.h  individual.tcc  individual_format.h  numerical_optimiser.h  numerical_refiner.h  primitive.h  problem.cc  problem.h  search.h  search.tcc
src/kernel/ga/: individual.cc  individual.h  individual.tcc  individual_format.h  primitive.h  problem.cc  problem.h  search.h  search.tcc
src/kernel/gp/: function.cc  function.h  gene.cc  gene.h  individual.cc  individual.h  individual_exon_view.tcc  individual_format.h  individual_iterator.tcc  interpreter.cc  interpreter.h  locus.h  numerical_optimiser.cc  numerical_optimiser.h  numerical_optimiser.tcc  team.h  team.tcc
src/kernel/gp/primitive/: integer.h  real.h  string.h
src/kernel/gp/src/: calculate_metrics.cc  calculate_metrics.h  classification_result.h  columns_info.cc  columns_info.h  columns_info.tcc  dataframe.cc  dataframe.h  dataframe.tcc  evaluator.h  evaluator.tcc  evaluator_internal.tcc  holdout_validation.cc  holdout_validation.h  interpreter.cc  interpreter.h  metrics.h  multi_dataset.h  multi_dataset.tcc  oracle.cc  oracle.h  oracle.tcc  oracle_internal.tcc  predictor.h  problem.cc  problem.h  search.cc  search.h  search.tcc  variable.h
src/kernel/hga/: individual.cc  individual.h  individual.tcc  individual_format.h  primitive.h  problem.cc  problem.h  search.h  search.tcc
src/test/: CMakeLists.txt  alps.cc  analyzer.cc  cache.cc  calculate_metrics.cc  columns_info.cc  dataframe.cc  de_individual.cc  de_problem.cc  de_search.cc  debug_datasets.h  debug_support.h  decision_vector.cc  distribution.cc  evaluator.cc  evaluator_proxy.cc  evolution.cc  evolution_recombination.cc  evolution_replacement.cc  evolution_selection.cc  evolution_status.cc  evolution_strategy.cc  evolution_summary.cc  evolution_summary2.cc  fitness.cc  fixture1.h  fixture2.h  fixture3.h  fixture4.h  fixture5.h  fixture6.h  function.cc  ga_individual.cc  ga_problem.cc  ga_search.cc  gene.cc  gp_individual.cc  gp_numerical_optimiser.cc  hash_t.cc  hga_individual.cc  (+50 more)
src/test/test_resources/: testall.bat
src/utility/: assert.h  log.cc  log.h  matrix.h  matrix.tcc  misc.cc  misc.h  mutex_guarded.h  pocket_csv.h  term.cc  term.h  thread_pool.h  timer.h  ts_queue.h  tsan.supp  xml_tools.cc  xml_tools.h  xml_tools.tcc  xoshiro256ss.cc  xoshiro256ss.h
src/wopr/: CMakeLists.txt  checksum_summary.py  command_line.cc  command_line.h  dashboard.cc  dashboard.h  gui_helpers.cc  gui_helpers.h  imgui_app.cc  imgui_app.h  merge_summary.py  monitor.cc  monitor.h  monitor_data.cc  monitor_data.h  results.cc  results.h  run.cc  wopr.cc  wopr.h
tools/: setversion.py  single_include.py
